backgroud color txt and color change contact us

--- a/PagSQMetal/css/contactUs.css
+++ b/PagSQMetal/css/contactUs.css
@@ -66,6 +66,14 @@ p, h1, h2, h3, h4, h5, h6, span{
     filter: saturate(0%);
 }
 
+.formStyleTxt{
+    background-color: #ffd073;
+}
+
+.subtitleColor{
+    color: #d8b75a;
+}
+
 @media(max-width:300px) {
     #im{
         flex: 100%;
