--- a/PagSQMetal/css/contactUs.css
+++ b/PagSQMetal/css/contactUs.css
@@ -67,7 +67,7 @@ p, h1, h2, h3, h4, h5, h6, span{
 }
 
 .formStyleTxt{
-    background-color: #ffd073;
+    background-color: #d8b75a;
 }
 
 .subtitleColor{
